--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
+        with:
+          deno-version: v2.x
 
       - name: Install dependencies
-        run: npm install
+        run: deno install
 
       - name: Generate project as a static site
-        run: npm run generate
+        run: deno task generate
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
