--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
+    "@types/markdown-it": "^14.1.2",
     "nuxt": "^3.14.1592",
     "tsparticles": "^3.7.1",
     "vue": "latest",
