--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
     "@types/markdown-it": "^14.1.2",
+    "mathpix-markdown-it": "^2.0.9",
     "nuxt": "^3.14.1592",
     "tsparticles": "^3.7.1",
     "vue": "latest",
