--- a/package.json
+++ b/package.json
@@ -10,13 +10,28 @@
     "postinstall": "rm assets/blog_list.json && sh utils/track_posts.sh >> assets/blog_list.json &&nuxt prepare"
   },
   "dependencies": {
+    "@mdit/plugin-alert": "^0.14.0",
+    "@mdit/plugin-align": "^0.14.0",
+    "@mdit/plugin-figure": "^0.14.0",
+    "@mdit/plugin-footnote": "^0.14.0",
+    "@mdit/plugin-mark": "^0.14.0",
+    "@mdit/plugin-tab": "^0.14.0",
+    "@mdit/plugin-tasklist": "^0.14.0",
+    "@mdit/plugin-tex": "^0.14.0",
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
     "@types/markdown-it": "^14.1.2",
+    "css-loader": "^7.1.2",
+    "markdown-it-checkbox": "^1.1.0",
     "mathpix-markdown-it": "^2.0.9",
     "nuxt": "^3.14.1592",
+    "ofetch": "^1.4.1",
+    "postcss-loader": "^8.1.1",
+    "tex-to-svg": "^0.2.0",
+    "texsvg": "^2.2.2",
     "tsparticles": "^3.7.1",
     "vue": "latest",
+    "vue-loader": "^17.4.2",
     "vue-router": "latest",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/vue3": "^3.0.1",
