--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -34,12 +34,14 @@ jobs:
         uses: actions/checkout@v4
       - name: Activate Venv
         run: source venv/bin/activate
+      - name: List files
+        run: ls
       - name: Update Page manifest
-        run: python ./util/pageupdater/page_list_gen.py && ls
+        run: python util/pageupdater/page_list_gen.py
       - name: Update Page history
-        run: python ./util/pageupdater/commit_post_history.py
+        run: python util/pageupdater/commit_post_history.py
       - name: Generate RSS feed
-        run: python ./util/pageupdater/rss_xml_gen.py
+        run: python util/pageupdater/rss_xml_gen.py
       - name: Upload artifacts (assets and public)
         uses: actions/upload-artifact@v4
         with:
