--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -42,14 +42,8 @@ jobs:
         run: python utils/pageupdater/commit_post_history.py
       - name: Generate RSS feed
         run: python utils/pageupdater/rss_xml_gen.py
-      - name: Upload artifacts (assets and public)
-        uses: actions/upload-artifact@v4
-        with:
-          name: artifacts
-          path: |
-            assets
-            public
-
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
 
   # Build job
   build:
