--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: pip install python-frontmatter && deno install
       - name: Update Page list
-        run: deno utils/pageupdater/update_pagelist.ts
+        run: deno utils/pageupdater/update_pagelist.ts --allow-all
       - name: Update Page history
         run: python utils/pageupdater/commit_post_history.py
       - name: Generate RSS feed
