--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdit/plugin-tab": "^0.14.0",
     "@mdit/plugin-tasklist": "^0.14.0",
     "@mdit/plugin-tex": "^0.14.0",
+    "@nuxt/content": "^2.13.4",
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
     "@types/markdown-it": "^14.1.2",
