--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -44,8 +44,8 @@ jobs:
         run: deno --allow-all utils/page_updater/update_pagelist.ts 
       - name: Update Page history
         run: python utils/page_updater/commit_post_history.py
-      - name: Generate RSS feed
-        run: python utils/page_updater/rss_xml_gen.py
+    #  - name: Generate RSS feed
+     #   run: python utils/page_updater/rss_xml_gen.py
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
 
