--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
     "@types/markdown-it": "^14.1.2",
+    "animejs": "^3.2.2",
     "css-loader": "^7.1.2",
     "markdown-it-checkbox": "^1.1.0",
     "mathpix-markdown-it": "^2.0.9",
