--- a/package.json
+++ b/package.json
@@ -19,20 +19,26 @@
     "@mdit/plugin-tasklist": "^0.14.0",
     "@mdit/plugin-tex": "^0.14.0",
     "@nuxt/content": "^2.13.4",
+    "@nuxt/test-utils": "^3.15.4",
+    "@nuxtjs/i18n": "9.2.0",
     "@popperjs/core": "^2.11.8",
     "@tsparticles/slim": "^3.7.1",
     "@types/markdown-it": "^14.1.2",
+    "@vue/test-utils": "^2.4.6",
     "animejs": "^3.2.2",
     "css-loader": "^7.1.2",
+    "happy-dom": "^17.1.0",
     "markdown-it-checkbox": "^1.1.0",
     "mathpix-markdown-it": "^2.0.9",
     "nuxt": "^3.14.1592",
     "ofetch": "^1.4.1",
+    "playwright-core": "^1.50.1",
     "postcss-loader": "^8.1.1",
     "sass-embedded": "^1.83.1",
     "tex-to-svg": "^0.2.0",
     "texsvg": "^2.2.2",
     "tsparticles": "^3.7.1",
+    "vitest": "^3.0.5",
     "vue": "latest",
     "vue-loader": "^17.4.2",
     "vue-router": "latest",
